<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".addHargaActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:elevation="14dp"
        app:cardCornerRadius="14dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/komoditas"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:hint="Nama Komoditas"
                android:inputType="text"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/provinsi"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:hint="Nama Komoditas"
                android:inputType="text"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/kabupaten"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:hint="Nama Komoditas"
                android:inputType="text"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/ukuran"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:hint="@string/formSize"
                android:inputType="number"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/harga"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:inputType="number"
                android:layout_marginBottom="20dp"
                android:hint="@string/formPrice"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/bt_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="14dp"
        app:cardBackgroundColor="@color/teal_200"
        app:cardCornerRadius="14dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSave"
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/cardview_light_background"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>